# whisper-transcriber

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  taskfile.yaml
.github/workflows/: python-lint-test-upload.yml
tests/: test_audio_transcription.py
transcriber/: audio_transcription.py
whisper_transcriber/: transcriber.py
